[package]
name = "voice-gender"
version = "0.1.0"
edition = "2021"
description = "Small Rust HTTP service for voice gender classification from 16 kHz mono WAV audio."
license = "MIT"
keywords = ["audio", "classification", "wav2vec2", "candle"]
categories = ["multimedia::audio", "science"]

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[dependencies]
anyhow = "1"
axum = "0.7"
candle-core = "0.10.2"
candle-nn = "0.10.2"
clap = { version = "4", features = ["derive"] }
hf-hub = "0.4"
hound = "3"
rubato = "0.16"
safetensors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
